--- a/projects/DOM-pig-game/style.css
+++ b/projects/DOM-pig-game/style.css
@@ -5,9 +5,14 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    
 }
+
+html {
+    box-sizing: border-box;
+  }
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
 
 .clearfix::after {
     content: "";
@@ -34,7 +39,6 @@ body {
     transform: translate(-50%, -50%);
     background-color: #fff;
     box-shadow: 0px 10px 50px rgba(0, 0, 0, 0.3);
-    overflow: hidden;
 }
 
 .player-0-panel,
